--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hang man game</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <h1>HANGMAN GAME</h1>
@@ -58,5 +58,6 @@
     <div class="notification-container" id="notification-container">
       <p>You already Entered This Letter</p>
     </div>
+    <script src="./js/app.js"></script>
   </body>
 </html>
